client/src/pages/home-page/_home-page.scss
.home {
  @include media-breakpoint-down(md) {
    padding: 0 30px;
  }
  @include media-breakpoint-down(sm) {
    padding: 0 20px;
  }

  .container-fluid {
    padding: 0;
  }
  &__heading {
    margin-bottom: 30px;
    z-index: 5;
  }
  &__text {
    margin-bottom: 15px;
    z-index: 5;
  }
  &__list {
    margin: 20px 0 45px;
    z-index: 5;
  }
  &__btn {
    margin-bottom: 50px;
    z-index: 5;
  }

  canvas {
    position: absolute;
    top: 0;
    left: 0;
    z-index: -1;
  }
  .tsparticles {
    z-index: 1;
  }
  .tsparticles-canvas-el {
    position: absolute;
    top: 0;
    left: 0;
  }
}

